FoxRabbit/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_11\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Users\Shane\Google Drive\Game Design\Java\TheRoom
-d
C:\Users\Shane\Google Drive\Game Design\Java\TheRoom\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Shane\Google Drive\Game Design\Java\TheRoom\Fox.java
<---- end of javadoc command ---->
Loading source file C:\Users\Shane\Google Drive\Game Design\Java\TheRoom\Fox.java...
C:\Users\Shane\Google Drive\Game Design\Java\TheRoom\Fox.java:56: error: ';' expected
        int columnDistance = j-column; the number of columns the rabbit is away from the fox
                                                 ^
C:\Users\Shane\Google Drive\Game Design\Java\TheRoom\Fox.java:56: error: ';' expected
        int columnDistance = j-column; the number of columns the rabbit is away from the fox
                                                            ^
C:\Users\Shane\Google Drive\Game Design\Java\TheRoom\Fox.java:56: error: ';' expected
        int columnDistance = j-column; the number of columns the rabbit is away from the fox
                                                                       ^
C:\Users\Shane\Google Drive\Game Design\Java\TheRoom\Fox.java:56: error: ';' expected
        int columnDistance = j-column; the number of columns the rabbit is away from the fox
                                                                               ^
C:\Users\Shane\Google Drive\Game Design\Java\TheRoom\Fox.java:56: error: ';' expected
        int columnDistance = j-column; the number of columns the rabbit is away from the fox
                                                                                        ^
C:\Users\Shane\Google Drive\Game Design\Java\TheRoom\Fox.java:56: error: not a statement
        int columnDistance = j-column; the number of columns the rabbit is away from the fox
                                                                                         ^
C:\Users\Shane\Google Drive\Game Design\Java\TheRoom\Fox.java:56: error: ';' expected
        int columnDistance = j-column; the number of columns the rabbit is away from the fox
                                                                                            ^
7 errors
